--- a/ショートカット集.rst
+++ b/ショートカット集.rst
@@ -1,5 +1,9 @@
-ショートカット 	内容説明 	詳細情報
+================================================================================
+Altium ショートカット集
+================================================================================
 
+一般的なAltium環境のショートカット
+---------------------------------------------------------------------------------
 
 :F1:    現在、カーソル下にあるコマンド、ダイアログ、パネル、およびオブジェクトのリソースに関する技術ドキュメントを表示 	リソース参照
 :Ctrl+O:    既存のOpenダイアログを使用しているドキュメントを開く 	
@@ -20,3 +24,46 @@
 :WindowsエクスプローラからAltium Designerへドラッグ アンド ドロップ: ドキュメント、プロジェクトあるいはデザインワークスペースを開く 	-
 :Shift+Ctrl+F3:  	Messagesパネルで次 (下) のメッセージに移動して、そのメッセージに関連するドキュメント内のオブジェクトへクロスプローブする (対応している場合) 	
 :Shift+Ctrl+F4:  	Messagesパネルで前 (上) のメッセージに移動して、そのメッセージに関連するドキュメント内のオブジェクトへクロスプローブする (対応している場合) 	
+
+
+共通のエディタのショートカット
+---------------------------------------------------------------------------------
+
+:Ctrl+C (または、Ctrl+Insert): 	セレクションをコピー 	
+:Ctrl+X (または、Shift+Delete): 	セレクションを切り取り 	
+:Ctrl+V (または、Shift+Insert): 	セレクションをペースト 	
+:Delete: 	セレクションを削除 	
+:Ctrl+Z (または、Alt+Backspace): 	Undo 	
+:Ctrl+Y (または、Ctrl+Backspace): 	Redo 	
+
+
+
+
+
+ショートカット 	内容説明 	詳細情報...
+:Shift+Ctrl+V: 	Smart Pasteダイアログを表示 	
+:Ctrl+F: 	テキストを検索 	
+:Ctrl+H: 	テキストを検索して置換 	
+:F3: 	次の検索テキストを見つける 	
+:Ctrl+A: 	すべて選択 	
+:Ctrl+R: 	選択したオブジェクトをコピーして、ワークスペース内で繰り返しペースト (ラバースタンプ) 	
+:Spacebar: 	セレクションを反時計回りに90°回転 	
+:Shift+Spacebar: 	セレクションを時計回りに90°回転 	
+:Shift+Ctrl+L: 	選択したオブジェクトを左端に揃える 	
+:Shift+Ctrl+R: 	選択したオブジェクトを右端に揃える 	
+:Shift+Ctrl+H: 	選択したオブジェクトの水平間隔を揃える 	
+:Shift+Ctrl+T: 	選択したオブジェクトを上端に揃える 	
+:Shift+Ctrl+B: 	選択したオブジェクトを下端に揃える 	
+:Shift+Ctrl+D: 	選択したオブジェクトをスナップグリッド上の最も近い箇所に移動 	
+:Ctrl+Home: 	カーソルを現在のドキュメントの絶対原点の座標 (0,0) へ移動 	
+:Ctrl+Q: 	セレクションメモリ機能をコントロールするSelection Memoryダイアログを表示 	
+:Ctrl+n (n = 1から8): 	現在のセレクションをメモリロケーションnに保存 	
+:Alt+n (n = 1から8): 	セレクションをメモリロケーションnから呼び出す 	
+:Shift+n (n= 1から8): 	現在のセレクションを既にメモリロケーションnに保存したセレクションに追加 	
+:Alt+Shift+n (n = 1から8): 	メモリロケーションｎからセレクションを呼び出し、ワークスペースの現在のセレクションに追加 	
+:Shift+Ctrl+n (n = 1から8): 	メモリロケーションnのセレクションセットに基づくフィルタリングを適用 	
+:Shift+F: 	Find Similar Objects機能を使用 (オブジェクト上をクリックしてベーステンプレートとして使用する) 	
+:Ctrl+PgDn: 	現在のドキュメントのデザイン オブジェクトをすべて表示 	
+:PgUp: 	現在のカーソル位置を基準にズームイン。
+:PgDn: 	現在のカーソル位置からズームアウト。
+
