--- a/ショートカット集.rst
+++ b/ショートカット集.rst
@@ -36,11 +36,10 @@ Altium ショートカット集
 :Ctrl+Z (または、Alt+Backspace): 	Undo 	
 :Ctrl+Y (または、Ctrl+Backspace): 	Redo 	
 
+回路図/回路図ライブラリ エディタのショートカット
+---------------------------------------------------------------------------------
 
 
-
-
-ショートカット 	内容説明 	詳細情報...
 :Shift+Ctrl+V: 	Smart Pasteダイアログを表示 	
 :Ctrl+F: 	テキストを検索 	
 :Ctrl+H: 	テキストを検索して置換 	
