--- a/ショートカット集.rst
+++ b/ショートカット集.rst
@@ -65,4 +65,52 @@ Altium ショートカット集
 :Ctrl+PgDn: 	現在のドキュメントのデザイン オブジェクトをすべて表示 	
 :PgUp: 	現在のカーソル位置を基準にズームイン。
 :PgDn: 	現在のカーソル位置からズームアウト。
-
+:マウスホイール: 	デザインワークスペース内を縦にスクロール。これはデフォルト設定ですが、PreferencesダイアログのSystem - Mouse Wheel Configurationページから変更可能です 	-
+:Shift+マウスホイール: 	デザインワークスペース内を横にスクロール。これはデフォルト設定ですが、PreferencesダイアログのSystem - Mouse Wheel Configurationページから変更可能です。 	-
+:Home: 	メインデザインウィンドウを再描画。カーソルを置いた位置が (コマンドを実行する前に)、ウィンドウの中央に表示されます 	
+:End: 	画面を更新。現在のドキュメントを再描画して、変更後の不要なオブジェクトを削除 	
+:Alt+F5: 	現在のドキュメントに関するエディタの表示を最大化するかしないか切り換え 	
+:G: 	事前に定義されたスナップグリッド設定を順方向に切り換え 	
+:Shift+G: 	事前に定義されたスナップグリッド設定を逆方向に切り換え 	
+:Shift+Ctrl+G: 	現在のドキュメントのvisible gridのオン/オフを切り換え 	
+:Ctrl+Shift: 	グリッドを一時的に無効 	-
+:Shift+E: 	カーソルのエレクトリカル グリッドのオン/オフを切り換え 	
+:Ctrl+L: 	Board Level Annotateダイアログを利用してBoard Level Annotationを実行 	
+:Ctrl+M: 	アクティブな回路図ドキュメント上の2点間の距離を測定 	
+:←: 	現在のドキュメント ワークスペース内で、カーソルを1スナップグリッド単位で左に移動 	
+:Shift+←: 	現在のドキュメント ワークスペース内で、カーソルを10スナップグリッド単位で左に移動 	
+:→: 	現在のドキュメント ワークスペース内で、カーソルを1スナップグリッド単位で右に移動 	
+:Shift+→: 	現在のドキュメント ワークスペース内で、カーソルを10スナップグリッド単位で右に移動 	
+:↑: 	現在のドキュメント ワークスペース内で、カーソルを1スナップグリッド単位で上に移動 	
+:Shift+↑: 	現在のドキュメント ワークスペース内で、カーソルを10スナップグリッド単位で上に移動 	
+:↓: 	現在のドキュメント ワークスペース内で、カーソルを1スナップグリッド単位で下に移動 	
+:Shift+↓: 	現在のドキュメント ワークスペース内で、カーソルを10スナップグリッド単位で下に移動 	
+:Ctrl+←: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したデザイン オブジェクト) を1スナップグリッド単位で左に移動 	
+:Shift+Ctrl+←: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したデザイン オブジェクト) を10スナップグリッド単位で左に移動 	
+:Ctrl+→: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したデザイン オブジェクト) を1スナップグリッド単位で右に移動 	
+:Shift+Ctrl+→: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したデザイン オブジェクト) を10スナップグリッド単位で右に移動 	
+:Ctrl+↑: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したデザイン オブジェクト) を1スナップグリッド単位で上に移動 	
+:Shift+Ctrl+↑: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したデザイン オブジェクト) を10スナップグリッド単位で上に移動 	
+:Ctrl+↓: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したデザイン オブジェクト) を1スナップグリッド単位で下に移動 	
+:Shift+Ctrl+↓: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したデザイン オブジェクト) を10スナップグリッド単位で下に移動 	
+:Shift+Ctrl+クリックしたままドラッグ: 	カーソル下のオブジェクトを移動 	
+:Ctrl+クリックしたままドラッグ: 	カーソル下の電気的オブジェクトを、他の電気的オブジェクトとの接続を維持しながらドラッグ 	
+:Shift+クリック: 	他のオブジェクトの状態に影響を与えずに、カーソル下のオブジェクトのセレクション状態を変更 	
+:クリック: 	カーソル下のオブジェクトを選択/選択解除 	
+:ダブルクリック: 	カーソル下のオブジェクトのプロパティを変更 	
+:クリック (オブジェクト上) したままドラッグ: 	カーソル下の単一オブジェクト (あるいは、オブジェクトがセレクションの一部であるときは選択した複数オブジェクト) を移動 	
+:クリック (オブジェクト以外の場所) したままドラッグ (左から右へ): 	セレクション領域の境界内に含まれるすべてのオブジェクトを選択 	
+:クリック (オブジェクト以外の場所) したままドラッグ (右から左へ): 	セレクション領域の境界内に含まれる、あるいは境界に接触するすべてのオブジェクトを選択 	
+:右クリックしたままドラッグ: 	スライダー (パンニング) ハンド カーソルを表示して、ワークスペースの画面をドラッグして移動 	
+:右クリック: 	ワークスペースやカーソル下のオブジェクトのメニューを表示。インタラクティブ コマンドを実行中の場合、現在の動作を停止 	-
+:F12: 	SCH Filterパネル、あるいはSCHLIB Filterパネルの表示を切り換え 	-
+:Shift+F12: 	SCH Listパネル、あるいはSCHLIB Listパネルの表示を切り換え 	-
+:Shift+C: 	現在、アクティブ ドキュメントに適用されているフィルタを解除 	
+:Shift+Ctrl+C: 	開いている (または、開いて非表示になっている) 回路図ドキュメントすべての下線付きのハイライト表示をすべて解除 	
+:F2: 	定位置にある選択したテキストオブジェクトを編集 (直接編集) 	
+:Alt+Ctrl+A: 	アクティブ ドキュメントの定義した領域に新しいコメントスレッドを追加。コメント機能を使用する前に、管理されたプロジェクトを開き (チェックアウト)、そのソース回路図ドキュメントで作業していることを確認する必要があります 	
+:Alt+Ctrl+P: 	アクティブ ドキュメントで指定した箇所に新しいコメントスレッドを追加。コメント機能を使用する前に、管理されたプロジェクトを開き (チェックアウト)、そのソース回路図ドキュメントで作業していることを確認する必要があります 	
+:Alt+Ctrl+C: 	アクティブ ドキュメントで選択したコンポーネントに新しいコメントスレッドを追加。コメント機能を使用する前に、管理されたプロジェクトを開き (チェックアウト)、そのソース回路図ドキュメントで作業していることを確認する必要があります 	
+:Alt+Ctrl+R: 	アクティブ ドキュメントで選択したコメントに新しいコメントレビューを追加 	
+:F5: 	 Net Color Override機能表示のオン/オフを切り換え 	
+:F11: 	 Propertiesパネルの表示を切り換え 	
