--- a/ショートカット集.rst
+++ b/ショートカット集.rst
@@ -114,3 +114,181 @@ Altium ショートカット集
 :Alt+Ctrl+R: 	アクティブ ドキュメントで選択したコメントに新しいコメントレビューを追加 	
 :F5: 	 Net Color Override機能表示のオン/オフを切り換え 	
 :F11: 	 Propertiesパネルの表示を切り換え 	
+
+
+インタラクティブのショートカット
+---------------------------------------------------------------------------------
+:F1: 	利用できるショートカットのリストが表示されるGraphical Editing Hot key Listダイアログ、および現在、実行中のコマンドに適したドキュメントを表示
+:Shift+F1: 	現在、実行中のインタラクティブ コマンドの現行段階に適用されるすべてのショートカット リストを表示
+:Enter: 	オブジェクトの配置/移動に際して、マウスのクリックと同じ動作
+:PgUp: 	ズームイン
+:PgDn: 	ズームアウト
+:End: 	画面を更新
+:Home: 	現在のカーソル位置 (接触しているオブジェクトも共に配置/移動される) をデザイン ウィンドウの中央に表示
+:←: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を1スナップグリッド単位で左に移動
+:Shift+←: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を10スナップグリッド単位で左に移動
+:→: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を1スナップグリッド単位で右に移動
+:Shift+→: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を10スナップグリッド単位で右に移動
+:↑: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を1スナップグリッド単位で上に移動
+:Shift+↑: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を10スナップグリッド単位で上に移動
+:↓: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を1スナップグリッド単位で下に移動
+:Shift+↓: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を10スナップグリッド単位で下に移動
+:Tab: 	配置/移動するオブジェクトのプロパティを即座に変更できるPropertiesパネルを表示
+:X: 	配置/移動するオブジェクトをX軸に沿って反転
+:Y: 	配置/移動するオブジェクトをY軸に沿って反転
+:Alt: 	初期の移動方向に応じて、移動の方向を横/縦軸に制限
+:Shift: 	オブジェクトを配置/移動中、高速で自動パンニング
+:Esc: 	現在のプロセス (現在、実行中のインタラクティブ コマンドの段階、あるいはコマンド自体) を解除
+:スペースバー: 	配置/移動するオブジェクトを反時計回りに回転。回転は、90°単位
+:Shift+スペースバー:    配置/移動するオブジェクトを時計回りに回転。回転は、90°単位
+:Ctrl+スペースバー: 	ドラッグしているオブジェクトを反時計回りに回転。回転は、90°単位
+:Shift+Ctrl+スペースバー: 	ドラッグしているオブジェクトを時計回りに回転。回転は、90°単位
+:Insert:    同じタイプのオブジェクトを配置するとき、カーソル位置のオブジェクトの属性をコピー、ワイヤ、ライン、バス、シグナルハーネス、あるいはポリゴンを配置するときに頂点を追加
+:クリックしたまま+Insert: 	配置されたワイヤ、ライン、バス、もしくはシグナルハーネスのセグメント上、または配置されたポリゴンの端に頂点を追加
+:クリックしたまま+Delete: 	配置されたワイヤ、ライン、バス、シグナルハーネス、あるいはポリゴン上から頂点を削除
+:バックスペース、あるいはDelete: 	ワイヤ、ライン、バス、シグナルハーネス、あるいはポリゴンを配置するときに最後に配置したセグメントを削除
+:+ (10キー上の): 	現在、配置/移動しているIEEEシンボルのサイズを拡大
+:- (10キー上の): 	現在、配置/移動しているIEEEシンボルのサイズを縮小
+:Alt+クリック: 	ネットオブジェクト上で、アクティブな設計プロジェクトのすべてのシートに渡るネットに関連したオブジェクトをハイライト
+:Ctrl+ダブルクリック(シートエントリ上で): そのエントリの親シートシンボルが参照するサブシート上の対応するポートにジャンプ  
+:Ctrl+ダブルクリック(ポート上で): ポートがあるサブシートを参照する親シートシンボル内のシートエントリにジャンプ、接続先の回路図ドキュメント上にある同じ名称の他のポートにジャンプ (Net Identifier Scope (Project OptionsダイアログのOptionsタブで設定) がFlat、またはGlobalに設定されているときのみ利用可能)
+:Ctrl+ダブルクリック(シートシンボル上で):    デザイン階層を下って該当シンボルが参照する子シートを開く
+:S: 	現在、選択している移動中のシートエントリ (または、エントリ) を、親シートシンボルの反対側に変更
+:V: 	現在、選択している移動中の複数のシートエントリの順番を逆に変更
+:T: 	 選択したシートエントリの移動中にIOタイプを切り換え
+
+サブメニューのショートカット
+---------------------------------------------------------------------------------
+:A: 	Alignサブメニュー
+:B: 	Toolbarsサブメニュー
+:J: 	Jumpサブメニュー
+:K: 	Panelsサブメニュー
+:M: 	Moveサブメニュー
+:O: 	右クリックOptionsサブメニュー
+:S: 	Selectサブメニュー
+:X: 	DeSelectサブメニュー
+:Y: 	右クリックFilterサブメニュー
+:Z: 	zoomコマンドを含むポップアップメニュー
+
+PCB/PCBライブラリ エディタのショートカット
+---------------------------------------------------------------------------------
+:Tab: 	デザインで選択した最初のオブジェクトと共に、論理階層に基づいて次の上位レベルのオブジェクト (または、オブジェクト) をセレクションに含めることができます。
+:Shift+Tab: 	セレクション ポップアップ ウィンドウを使用せずに、同じ位置に配置されている (重なった) 次のオブジェクトを選択。このコマンドを使用するとき、PreferencesダイアログのPCB Editor - GeneralページでDisplay popup selection dialogオプションが無効になっていることを確認してください。	
+:Shift+Ctrl+X: 	Cross Select Modeを有効化 	
+:Ctrl+A: 	現在のドキュメント上のオブジェクトを選択 	
+:Ctrl+B: 	ボードシェープの境界内にあるオブジェクトを選択 	
+:Ctrl+H: 	同じ銅箔に接続されている電気的なオブジェクトを選択 	
+:Ctrl+R: 	ワークスペース内で選択したオブジェクトを繰り返しコピーしてペースト (ラバースタンプ) 	
+:Alt+Insert: 	最初のレイヤー割り当てに関わりなく現在のレイヤー上にオブジェクトをペースト 	
+:Shift+Ctrl+L: 	選択したオブジェクトの左端に整列 	
+:Shift+Ctrl+R: 	選択したオブジェクトの右端に整列 	
+:Alt+Shift+L: 	デザインルールに従って、適切なスペースを維持しながら選択したオブジェクトの左端に整列 	
+:Alt+Shift+R: 	デザインルールに従って、適切なスペースを維持しながら選択したオブジェクトの右端に整列 	
+:Shift+Ctrl+H: 	選択したオブジェクトの水平間隔を均等にする 	
+:Shift+Ctrl+T: 	選択したオブジェクトの上端に整列 	
+:Shift+Ctrl+B: 	選択したオブジェクトの下端に整列 	
+:Shift+Alt+I: 	デザインルールに従って、適切なスペースを維持しながら選択したオブジェクトの上端に整列 	
+:Shift+Alt+N: 	デザインルールに従って、適切なスペースを維持しながら選択したオブジェクトの下端に整列 	
+:Shift+Ctrl+V: 	選択したオブジェクトの垂直間隔を均等にする 	
+:Shift+Ctrl+D: 	選択したコンポーネントをコンポーネント配置グリッド上の最も近い箇所に移動 	
+:Ctrl+Home: 	カーソルをワークスペースの左下の絶対原点へ移動 	
+:Ctrl+End: 	カーソルを現在のドキュメント (PCBドキュメント) の相対原点、あるいはコンポーネント基準点の位置 (PCBライブラリ ドキュメント) へ移動 	
+:Ctrl+Q: 	ワークスペース内でSelection Memoryダイアログ (Selection Memory機能をコントロールできます) を表示。ダイアログ、またはパネル内で測定単位をメートル系 (ｍｍ)、またはインチ系 (mil) に切り換え
+
+	
+:Ctrl+n (n = 1から8): 	現在のセレクションをメモリロケーションnに保存 	
+:Alt+n (n = 1から8): 	セレクションをメモリロケーションnから呼び出す 	
+:Shift+n (n = 1から8): 	現在のセレクションを既にメモリロケーションnに保存したセレクションに追加 	
+:Alt+Shift+n (n = 1から8): 	メモリロケーションｎからセレクションを呼び出し、ワークスペース内の現在のセレクションに追加 	
+:Shift+Ctrl+n (n = 1から8): 	メモリロケーションnのセレクションに基づくフィルタリングを適用 	
+:Shift+A: 	選択したコネクションをActiveRouteする 	
+:Shift+F: 	Find Similar Objects機能を実行 (オブジェクト上をクリックしてベーステンプレートとして使用する) 	
+:1: 	PCBワークスペースの表示をBoard Planningモードへ切り換え 	
+:2: 	PCBワークスペースの表示を2D Layoutモードへ切り換え 	
+:3: 	PCBワークスペースの表示を3D Layoutモードへ切り換え 	
+:Ctrl+PgDn: 	現在のドキュメントのデザイン オブジェクトをすべて表示 	
+:PgUp: 	現在のカーソル位置を基準にズームイン。
+:PgDn: 	現在のカーソル位置からズームアウト。
+:Shift+PgUp: 	現在のカーソル位置を基準に、段階的により小さなステップでズームイン 	
+:Shift+PgDn: 	現在のカーソル位置を基準に、段階的により小さなステップでズームアウト 	
+:Ctrl+PgUp: 	現在のドキュメントの拡大率を400%へ設定 	
+:マウスホイール: 	デザインワークスペース内を縦にスクロール。これはデフォルト設定ですが、PreferencesダイアログのSystem - Mouse Wheel Configurationページから変更可能です 	-
+:Shift+マウスホイール: 	デザインワークスペース内を横にスクロール。これはデフォルト設定ですが、PreferencesダイアログのSystem - Mouse Wheel Configurationページから変更可能です 	-
+:Home: 	メインデザインウィンドウを再描画。カーソルを置いた位置が (コマンドを実行する前に)、ウィンドウの中央に表示されます 	
+:End: 	画面を更新。現在のドキュメントを再描画して、変更後の不要なオブジェクトを削除 	
+:Alt+←:	現在のライブラリ ドキュメントの前のコンポーネントにジャンプ、もしくはアクティブにする。このコマンドでリストの最初のコンポーネントまで行くと、最後のコンポーネントへは戻りません。
+:Alt+→:　現在のライブラリ ドキュメントの次のコンポーネントにジャンプ、もしくはアクティブにする。このコマンドでリストの最後のコンポーネントまで行くと、最初のコンポーネントへは戻りません。	
+:Alt+End: 	現在のドキュメントの現行レイヤーを再描画して、変更後の不要なオブジェクトを削除 	
+:Alt+F5: 	現在のドキュメント エディタの表示を最大化するかしないかを切り換え 	
+:F5: 	Net Color Override機能の表示のオン/オフを切り換え 	
+:Shift+H: 	Heads Up Displayのオン/オフを切り換え 	
+:Shift+G: 	Heads Up Displayトラッキングのオン/オフを切り換え 	
+:Insert: 	Heads Up Display機能のデルタ原点を0,0にリセット 	
+:Shift+Z: 	現在のPCBドキュメントの3Dモデル表示を切り換え 	 	 
+:Shift+D: 	Heads Up Display内でデルタ座標の表示を切り換え 	
+:Shift+E: 	オブジェクトのHotspot Snappingを次のモードへ切り換え 	
+:Ctrl+G: 	現在のカーソル位置でスナップグリッドを定義するためのgrid editorダイアログを表示 	
+:Shift+Ctrl+G: 	X (横)、およびY (縦) のステップ値 (デフォルトのGlobal Board Snap Grid用) を選択した値に同時に設定 	
+:Ctrl+Shift: 	一時的にグリッドを無効 	-
+:Q: 	現在のドキュメントの測定単位をメートル系 (ｍｍ) とインチ系 (mil) 間で切り換え 	
+:Shift+O: 	メインデザインワークスペースでDifference Map Overlayの表示のオン/オフを切り換え、このコマンドは、Collaborate, Compare and Mergeパネルで比較した時のみ利用可能です。
+	
+:F6: 	Altium Designerの共同PCB設計機能を使用するとき、相違が検出されたセルのchecked、およびuncheckedの状態を切り換え 	
+:F7: 	Altium Designerの共同PCB設計機能を使用するとき、相違が検出された前のセルにナビゲート 	
+:F8: 	Altium Designerの共同PCB設計機能を使用するとき、相違が検出された次のセルにナビゲート 	
+:L: 	基板用レイヤーの表示、およびレイヤーに割り当てる色を設定できるView Configurationパネル のLayers And Colorsタブを表示 	
+:Ctrl+D: 	ワークスペース内の様々なデザインアイテムの表示に使用するモードを設定できるView ConfigurationパネルのView Optionsタブを表示 	
+:Shift+V: 	現在のカーソル下の (デザインルールの) 違反をリストアップしたBoard Insightポップアップを表示 	
+:Shift+X: 	現在のカーソル下のコンポーネント/ネット オブジェクトをリストアップしたBoard Insightポップアップを表示 	
+:Ctrl+M: 	現在のドキュメント上の2点間の距離を測定、および表示 	
+:←: 	現在のドキュメント ワークスペース内で、カーソルを1スナップグリッド単位で左に移動 	
+:Shift+←: 	現在のドキュメント ワークスペース内で、カーソルを10スナップグリッド単位で左に移動 	
+:→: 	現在のドキュメント ワークスペース内で、カーソルを1スナップグリッド単位で右に移動 	
+:Shift+→: 	現在のドキュメント ワークスペース内で、カーソルを10スナップグリッド単位で右に移動 	
+:↑: 	現在のドキュメント ワークスペース内で、カーソルを1スナップグリッド単位で上に移動 	
+:Shift+↑: 	現在のドキュメント ワークスペース内で、カーソルを10スナップグリッド単位で上に移動 	
+:↓: 	現在のドキュメント ワークスペース内で、カーソルを1スナップグリッド単位で下に移動 	
+:Shift+↓: 	現在のドキュメント ワークスペース内で、カーソルを10スナップグリッド単位で下に移動 	
+:Ctrl+←: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したオブジェクト) を1スナップグリッド単位で左に移動 	
+:Shift+Ctrl+←: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したオブジェクト) を10スナップグリッド単位で左に移動 	
+:Ctrl+→: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したオブジェクト) を1スナップグリッド単位で右に移動 	
+:Shift+Ctrl+→: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したオブジェクト) を10スナップグリッド単位で右に移動 	
+:Ctrl+↑: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したオブジェクト) を1スナップグリッド単位で上に移動 	
+:Shift+Ctrl+↑: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したオブジェクト) を10スナップグリッド単位で上に移動 	
+:Ctrl+↓: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したオブジェクト) を1スナップグリッド単位で下に移動 	
+:Shift+Ctrl+↓: 	現在のドキュメント ワークスペース内で、現在のセレクション (選択したオブジェクト) を10スナップグリッド単位で下に移動 	
+:Shift+クリック: 	他のオブジェクトの状態に影響を与えずに、カーソル下のオブジェクトのセレクション状態を変更 	
+:クリック: 	カーソル下のオブジェクトを選択/選択解除 	
+:Ctrl+クリック(ネット オブジェクト上で):    配線されたネット全体をハイライト
+:Ctrl+クリック(レイヤータブ上で):     そのレイヤの内容をハイライト
+:Ctrl+クリック(空き領域で):     現在のハイライトを解除
+:Shift+Ctrl+クリック(ネットオブジェクト上で): 	既にハイライトされた配線済みネットに加え、配線済みネット全体をハイライト (配線済みネットハイライトの累積表示)
+:Shift+Ctrl+クリック(レイヤータブ上で): 	既にハイライトされた他のレイヤー上の内容に加え、レイヤー上のすべての内容をハイライト (レイヤーハイライトの累積表示)
+:Alt+クリック: 	コネクション上で - コネクションを選択 	-
+:Alt+Shift+クリック: 	コネクション上で - 既に選択されたコネクションに加え、コネクションを選択 (コネクション選択の累積表示) 	-
+:Alt+クリックしたままドラッグ (右から左へ): 	マウスで囲った領域に接触するコネクションを選択 	-
+:Alt+クリック: 	カーソルをレイヤータブ上に置いたとき、そのレイヤーのみの内容をハイライト 	-
+:Shift+Ctrl+クリック保持: 	現在のカーソル位置のトラックセグメントで頂点 (あるいは、ブレイク) を作成 	
+:ダブルクリック: 	カーソル下のオブジェクトのプロパティを変更 	
+:クリック (オブジェクト上) したままドラッグ: 	カーソル下の単一オブジェクト (あるいは、オブジェクトがセレクションの一部であるときは、選択された複数オブジェクト) を移動 	
+:クリック (オブジェクト以外の場所) したままドラッグ (左から右へ) :	セレクション領域内に含まれるオブジェクトを選択 	
+:クリック (オブジェクト以外の場所) したままドラッグ (右から左へ) :	セレクション領域内に含まれる、あるいはその境界に接触するオブジェクトを選択 	
+:右クリックしたままドラッグ: 	スライダー (パンニング) ハンド カーソルを表示して、ワークスペースの画面をドラッグ移動 	
+:右クリック: 	カーソル下のワークスペースやオブジェクトのメニューを表示。インタラクティブ コマンド実行中の場合、現在の操作を終了 	-
+:F11: 	Propertiesパネルの表示を切り換え 	-
+:F12: 	PCB Filterパネル、あるいはPCBLIB Filterパネルの表示を切り換え 	-
+:Shift+F12: 	PCB Listパネル、あるいはPCBLIB Listパネルの表示を切り換え 	-
+:Shift+C: 	現在、アクティブ ドキュメントに適用されているフィルタを解除 	
+:Shift+S: 	シングルレイヤー表示モードを切り換え	
+:+ (10キー上の): 	次の層へ切り換え 	
+:- (10キー上の): 	前の層へ切り換え 	
+:* (10キー上の): 	次の信号層へ切り換え 	
+:Shift+* (10キー上の): 	前の信号層へ切り換え 	
+:Backspace: 	  単一の、選択した配線の終端オブジェクト (コンポーネント-フリートラック、アーク、ビア、あるいはパッド) を削除。削除したオブジェクトに接続された単数の配線オブジェクトは、続けて削除できるよう自動的に選択されます	
+:Ctrl+Delete: 	現在のドキュメント上の選択した配線オブジェクト (コンポーネント-フリートラック、アーク、ビア、あるいはパッド) を削除。削除したオブジェクトに接続されたすべての配線オブジェクトは、続けて削除できるよう自動的に選択されます	
+:Alt+Ctrl+A: 	アクティブ ドキュメントの定義した領域に新しいコメントスレッドを追加。コメント機能を使用する前に、管理されたプロジェクトを開き (チェックアウト)、そのPCBドキュメントで作業していることを確認する必要があります 	
+:Alt+Ctrl+P: 	アクティブ ドキュメントの指定した箇所に新しいコメントスレッドを追加。コメント機能を使用する前に、管理されたプロジェクトを開き (チェックアウト)、そのPCBドキュメントで作業していることを確認する必要があります 	
+:Alt+Ctrl+C: 	アクティブ ドキュメントの選択したコンポーネントに新しいコメントスレッドを追加。コメント機能を使用する前に、管理されたプロジェクトを開き (チェックアウト)、そのPCBドキュメントで作業していることを確認する必要があります 	
+
+
+
