--- a/ショートカット集.rst
+++ b/ショートカット集.rst
@@ -194,8 +194,6 @@ PCB/PCBライブラリ エディタのショートカット
 :Ctrl+Home: 	カーソルをワークスペースの左下の絶対原点へ移動 	
 :Ctrl+End: 	カーソルを現在のドキュメント (PCBドキュメント) の相対原点、あるいはコンポーネント基準点の位置 (PCBライブラリ ドキュメント) へ移動 	
 :Ctrl+Q: 	ワークスペース内でSelection Memoryダイアログ (Selection Memory機能をコントロールできます) を表示。ダイアログ、またはパネル内で測定単位をメートル系 (ｍｍ)、またはインチ系 (mil) に切り換え
-
-	
 :Ctrl+n (n = 1から8): 	現在のセレクションをメモリロケーションnに保存 	
 :Alt+n (n = 1から8): 	セレクションをメモリロケーションnから呼び出す 	
 :Shift+n (n = 1から8): 	現在のセレクションを既にメモリロケーションnに保存したセレクションに追加 	
@@ -232,7 +230,6 @@ PCB/PCBライブラリ エディタのショートカット
 :Ctrl+Shift: 	一時的にグリッドを無効 	-
 :Q: 	現在のドキュメントの測定単位をメートル系 (ｍｍ) とインチ系 (mil) 間で切り換え 	
 :Shift+O: 	メインデザインワークスペースでDifference Map Overlayの表示のオン/オフを切り換え、このコマンドは、Collaborate, Compare and Mergeパネルで比較した時のみ利用可能です。
-	
 :F6: 	Altium Designerの共同PCB設計機能を使用するとき、相違が検出されたセルのchecked、およびuncheckedの状態を切り換え 	
 :F7: 	Altium Designerの共同PCB設計機能を使用するとき、相違が検出された前のセルにナビゲート 	
 :F8: 	Altium Designerの共同PCB設計機能を使用するとき、相違が検出された次のセルにナビゲート 	
@@ -291,4 +288,108 @@ PCB/PCBライブラリ エディタのショートカット
 :Alt+Ctrl+C: 	アクティブ ドキュメントの選択したコンポーネントに新しいコメントスレッドを追加。コメント機能を使用する前に、管理されたプロジェクトを開き (チェックアウト)、そのPCBドキュメントで作業していることを確認する必要があります 	
 
 
+一般的なインタラクティブのショートカット
+---------------------------------------------------------------------------------
+
+:F1: 	利用できるショートカットのリスト (起動はできません) があるGraphical Editing Hot key Listダイアログ、および現在、実行中のコマンドに関するドキュメントを表示
+:Shift+F1: 	現在、実行中のインタラクティブ コマンドに適用されるショートカット リストを表示
+:Enter: 	オブジェクトを配置/移動する時のマウスのクリックと同じ動作
+:PgUp: 	ズームイン
+:PgDn: 	ズームアウト
+:End: 	画面を更新
+:Home: 	現在のカーソル位置 (接触しているオブジェクトも共に配置/移動される) をデザイン ウィンドウの中央に表示
+:←: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を1スナップグリッド単位で左に移動
+:Shift+←: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を10スナップグリッド単位で左に移動
+:→: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を1スナップグリッド単位で右に移動
+:Shift+→: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を10スナップグリッド単位で右に移動
+:↑: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を1スナップグリッド単位で上に移動
+:Shift+↑: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を10スナップグリッド単位で上に移動
+:↓: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を1スナップグリッド単位で下に移動
+:Shift+↓: 	現在のドキュメント ワークスペース内で、カーソル (接触しているオブジェクトも共に配置/移動される) を10スナップグリッド単位で下に移動
+:Tab: 	配置/移動しているオブジェクトのプロパティを即座に変更できる、Propertiesパネルを表示
+:X: 	配置/移動しているオブジェクトをX軸に沿って反転
+:Y: 	配置/移動しているオブジェクトをY軸に沿って反転
+:L: 	配置/移動しているオブジェクトを基板の反対面に反転
+:Alt: 	最初の移動方向に応じて、移動の方向を横/縦軸に制限
+:Shift: 	配置/移動中のオブジェクトを自動パンニングしているとき、高速にパン
+:+ (10キー上の): 	次の層へ切り換え
+:- (10キー上の): 	前の層へ切り換え
+:* (10キー上の): 	次の信号層へ切り換え
+:Shift+*: (10キー上の) 	前の信号層へ切り換え
+:Esc: 	現行プロセス (現在、実行中のインタラクティブ コマンドの段階、あるいはコマンドそのもの) を終了
+:スペースバー: 	配置/移動しているオブジェクトを反時計回りに回転。回転は、PreferencesダイアログのPCB Editor – Generalページで定義したRotation Stepの値に従います
+:Shift+スペースバー: 	配置/移動しているオブジェクトを時計回りに回転。回転は、PreferencesダイアログのPCB Editor – Generalページで定義したRotation Stepの値に従います
+:N: 	コンポーネントを移動中、コネクションライン (ラッツネスト) の表示を切り換え
+:クリック: 	現在のPCBドキュメントで選択したオブジェクトから、回路図ドキュメント上の対応するオブジェクトへクロスプローブ (連続モード)
+:Ctrl+クリック: 	現在のPCBドキュメントで選択したオブジェクトから、回路図ドキュメントをアクティブにしながら対応するオブジェクトへクロスプローブ (ジャンプ モード)
+:Ctrlキーを押し続ける: 	コンポーネントを移動するときに、該当コンポーネントと近辺のコンポーネントの境界に関するダイナミック整列ガイド (緑の表示ライン) を表示
+:Shiftキーを押し続ける: 	コンポーネントを移動するときに、該当コンポーネントと近辺のコンポーネントのパッドに関するダイナミック整列ガイド (緑の表示ライン) を表示
+:R: 	コンポーネントを移動するときに、component conflict resolutionモード (Ignore Obstacles、Push Obstacles、Avoid Obstacles) を切り換え
+:クリックしたままドラッグ: 	ビアスタックのビア上で、スタック全体を新しい位置に移動するために使用
+:Ctrl+クリックしたままドラッグ: 	ビアスタックのビア上で、ビアだけを新しい位置に移動 (スタック全体ではない)
+
+
+
+インタラクティブ多角形オブジェクトのショートカット
+---------------------------------------------------------------------------------
+:Shift+スペースバー: 	多角形ベースのオブジェクトを配置するときに5種類のコーナーモード (45°、45°アーク、90°、90°アーク、任意の角度) を切り換え
+:スペースバー: 	多角形ベースのオブジェクトを配置するときに、コーナー方向サブモード (関連したコーナーモード用) を切り換え
+:,: 	アークコーナー配置モードのとき、アークの半径を減少 (1 mil/0.025 mm単位で)
+:Shift+,: 	アークコーナー配置モードのとき、アークの半径を減少 (10mil/0.254mm単位で)
+:.: 	アークコーナー配置モードのとき、アークの半径を増加 (1 mil/0.025 mm単位で)
+:Shift+.: 	アークコーナー配置モードのとき、アークの半径を増加 (10mil/0.254mm単位で)
+:Ctrl+クリック保持: 	選択した多角形ベースのオブジェクトの外形にある編集ハンドルから離れた場所に新しい頂点を挿入
+:クリックしたまま+Delete: 	選択した多角形ベースのオブジェクトの頂点を削除するために使用
+:Backspace: 	最後に配置した頂点を削除
+
+インタラクティブ配線のショートカット
+---------------------------------------------------------------------------------
+:Tab: 	配線プリファレンス、および配置するトラックのプロパティを変更できるPropertiesパネル (Interactive Routingモード) を表示
+:Shift+スペースバー: 	5種類のコーナーモード (45°、45°アーク、90°、90°アーク、任意の角度) を切り換え
+:スペースバー: 	コーナー方向のサブモード (関連したコーナーモード用) を切り換え
+:,: 	アークコーナー配置モードのとき、アークの半径を減少 (1mil/0.025mm単位で)
+:Shift+,: 	アークコーナー配置モードのとき、アークの半径を減少 (10mil/0.254mm単位で)
+:.: 	アークコーナー配置モードのとき、アークの半径を増加 (1mil/0.025mm単位で)
+:Shift+.: 	アークコーナー配置モードのとき、アークの半径を増加 (10mil/0.254mm単位で)
+:クリック、あるいはEnter: 	現在のカーソル位置で配線を確定し、トラックを配置
+:Backspace: 	最後に確定した配線を始点に戻す。最後のセグメントを配置してオブジェクトが押しのけられた場合、それらは、最初の位置に戻されます
+:Esc: 	現在の配線を終了。終了する前に確定している配線は、保存されます
+:Ctrl+クリック: 	接続を自動で完了
+:1: 	ルックアヘッド配置モードのオン/オフを切り換え
+:Shift+R: 	現在、有効な配線の衝突解決モードを切り換え。利用可能なモード (Walkaround Obstacles、Push Obstacles、Hug and Push Obstacles、Ignore obstacles、Stop at First Obstacleを含む) は、PreferencesダイアログのPCB Editor - Interactive Routingページで定義でき、即座に変更できます (Tabキーを押して、Interactive RoutingモードのPropertiesパネルを表示)
+:5: 	Follow Mouse Trailモードを切り換え
+:Shift+D: 	自動ループ削除機能のオン/オフを切り換え
+:Ctrl+W: 	クリアランス境界の表示を切り換え
+:Ctrl+Alt+G: 	全体の配線長やコーナー数を減らして、選択した配線の品質を改善
+:Shift+W: 	TrackモードのPropertiesパネルで事前に定義した、お気に入りの配線幅からトラック幅を選択
+:Shift+V: 	Choose Via Sizesダイアログを使用して、事前に定義したビアテンプレートからビアサイズを選択
+:3: 	配線幅のソースを切り換え (User Choice --> Rule Minimum --> Rule Preferred --> Rule Maximum)
+:4: 	ビアサイズのソースを切り換え (User Choice --> Rule Minimum --> Rule Preferred --> Rule Maximum)
+:+ (10キー上の): 	次の (ルールに適合した) レイヤーへ切り換え、ビアを配置
+:- (10キー上の): 	前の (ルールに適合した) レイヤーへ切り換え、ビアを配置
+:* (10キー上の): 	次の (ルールに適合した) 信号層へ切り換え、ビアを配置
+:L: 	マルチレイヤー パッド、あるいはビアから配線するとき、現在の接続のレイヤーを次の信号層 (パッド/ビアに定義されている) へ切り換え。この機能は、パッド/ビアから配線を開始し、最初のセグメントを確定する前だけ利用できます。
+:/: 	ファンアウトビアを追加。ツールは、次のファンアウトの配線とビア配置のために即座に待機します
+:2: 	レイヤーを変更せずにビアを追加
+:6: 	ビアの開始/終了レイヤーを変更
+:7: 	現在のパッドに複数のコネクションがある場合、配線に利用できるコネクションを切り換え
+:9: 	カーソル位置を現在、選択中のパッド、あるいはトラックから接続先のパッド、あるいはトラックに切り換え。切り換わるオブジェクトの場所が現在のウィンドウ内にない場合、新しいカーソル位置へジャンプし、画面の中央に表示されます
+:Shift+C: 	サブネット スワッピングを有効化。スワップ可能なサブネットがない場合、これに関するメッセージがMessagesパネルに表示されます。
+:Shift+T: 	サブネットをスワップ - スワップ可能なサブネットを切り換え。インタラクティブ配線中、ショートカット Shift+Aを使用して、従来の配線長チューニングモードを利用できます。以下のその他のショートカットは、このモードで利用可能です:
+:Shift+A: 	アコーディオンを終了
+:Shift+G: 	配線長チューニング ゲージ表示のオン/オフを切り換え。クリック、あるいはEnter 	現在のカーソル位置で配線を確定し、トラックを配置
+:Backspace: 	最後のセグメント、あるいはアコーディオンを削除
+:Esc: 	現在の配線を終了。終了する前に確定した配線は、保存されます
+:Shift+R: 	現在、有効な配線の衝突解決モードを切り換え。利用可能なモード (Walkaround Obstacles、Push Obstacles、Hug and Push Obstacles、Ignore obstacles、Stop at First Obstacleを含む) は、PreferencesダイアログのPCB Editor - Interactive Routingページで定義できます。
+:Shift+W: 	Favorite Interactive Routing Widthsダイアログで事前に定義した、お気に入りの配線幅からトラック幅を選択
+:Tab: 	目標配線長を定義したり、チューニングに使用するアコーディオン パターンのプロパティを即座に変更できるAccordionモードのPropertiesパネルを表示
+:,: 	AccordionモードのPropertiesパネルにあるAmplitude Incrementで定義した数値に従って、アコーディオン パターンの振幅を減少
+:.: 	AccordionモードのPropertiesパネルにあるAmplitude Incrementで定義した数値に従って、アコーディオン パターンの振幅を増加
+:1: 	コーナー (miter) 半径を減少 (Mitered with Lines、あるいは Mitered with Arcsアコーディオン パターンの使用時)
+:2: 	コーナー (miter) 半径を増加 (Mitered with Lines、あるいはMitered with Arcsアコーディオン パターンの使用時)
+:3: 	AccordionモードのPropertiesパネルにあるGap Incrementで定義した数値に従って、アコーディオン パターンのギャップ (ピッチ) を減少
+:4: 	AccordionモードのPropertiesパネルにあるGap Incrementで定義した数値に従って、アコーディオン パターンのギャップ (ピッチ) を増加
+:P: 	対応しているチューニング パターンを前へ切り換え。利用できるパターンは: Mitered with Lines、Mitered with Arcs、Rounded
+:Shift+P: 	対応しているチューニング パターンを後へ切り換え。利用できるパターンは: Mitered with Lines、Mitered with Arcs、Rounded
+:Y: 	アコーディオン パターンの振幅方向 (開始方向) を切り換え
 
