--- a/ショートカット集.rst
+++ b/ショートカット集.rst
@@ -393,3 +393,141 @@ PCB/PCBライブラリ エディタのショートカット
 :Shift+P: 	対応しているチューニング パターンを後へ切り換え。利用できるパターンは: Mitered with Lines、Mitered with Arcs、Rounded
 :Y: 	アコーディオン パターンの振幅方向 (開始方向) を切り換え
 
+
+インタラクティブ差動ペア配線のショートカット
+---------------------------------------------------------------------------------
+:Tab: 	配線設定を即座に変更、および配置するトラックのプロパティを変更できるDifferential Pair RoutingモードのPropertiesパネルを表示
+:Shift+スペースバー: 	4種類のコーナーモード (45°、45°アーク、90°、90°アーク) を切り換え
+:スペースバー: 	コーナー方向サブモード (コーナーモード用) を切り換え
+:,: 	アークコーナー配置モードのとき、アークの半径を減少 (1mil/0.025mm単位で)
+:Shift+,: 	アークコーナー配置モードのとき、アークの半径を減少 (10mil/0.254mm単位で)
+:.: 	アークコーナー配置モードのとき、アークの半径を増加 (1mil/0.025mm単位で)
+:Shift+.: 	アークコーナー配置モードのとき、アークの半径を増加 (10mil/0.254mm単位で)
+:Backspace: 	最後のセグメントを削除
+:Esc: 	現在の配線を終了。終了する前に確定した配線は、保存されます
+:Shift+R: 	現在、有効な配線の衝突解決モードを切り換え。利用可能なモード (Walkaround Obstacles、Push Obstacles、Hug and Push Obstacles、Ignore obstacles、Stop at First Obstacleを含む) は、PreferencesダイアログのPCB Editor - Interactive Routingページで定義でき、即座に変更できます (Tabキーを押して、Differential Pair RoutingモードのPropertiesパネルを表示)
+:Shift+D: 	自動ループ削除機能のオン/オフを切り換え
+:Ctrl+W: 	クリアランス境界の表示を切り換え
+:Shift+W: 	TrackモードのPropertiesパネルで事前に定義した、お気に入りの配線幅からトラック幅を選択
+:Shift+V: 	Choose Via Sizesダイアログを使用して、事前に定義したビアテンプレートからビアサイズを選択
+:3: 	配線幅のソースを切り換え (User Choice --> Rule Minimum --> Rule Preferred --> Rule Maximum)。User Choiceについては、Favorite Interactive Routing Widthsダイアログで配線幅を定義、管理できます。ルールベースの値は、Differential Pairs Routingルールにより決まります。
+:4: 	ビアサイズのソースを切り換え (User Choice --> Rule Minimum --> Rule Preferred --> Rule Maximum)。User Choiceについては、 ビアテンプレート (アクティブなPCBドキュメントでローカルに、あるいはPad Viaライブラリ (*.PvLib) から) からビアサイズを定義します。
+:5: 	利用できるビアパターン (整列、または交互) を切り換え
+:6: 	配線中の差動ペアに適用するGap値を、Differential Pairs Routingルール (Min Gap --> Preferred Gap --> Max Gap) に従って切り換え
+:Shift+B: 	配線中の差動ペアに適用するWidth-Gap値を、Differential Pairs Routingルール (Min Width-Min Gap --> Preferred Width-Preferred Gap --> Max Width-Max Gap) に従って切り換え
+:+ (10キー上の): 	次の (ルールに適合した) 層へ切り換え、ビアを配置
+:- (10キー上の): 	前の (ルールに適合した) 層へ切り換え、ビアを配置
+:* (10キー上の): 	次の (ルールに適合した) 信号層へ切り換え、ビアを配置
+:L: 	マルチレイヤー パッド、あるいはビアから配線するとき、現在の接続のレイヤーを該当のパッド/ビア用に定義した次の信号層に切り換え。この機能は、パッド/ビアから配線を開始して、最初のセグメントを確定する前だけ利用できます。
+:/: 	ファンアウトビアを追加。ツールは、次のファンアウトの配線とビア配置のために即座に待機します
+:2:	レイヤーを変更せずにビアを追加
+:Shift+C: 	サブネット スワッピングを有効化
+:Shift+T: 	サブネットをスワップ - スワップ可能なサブネットを切り換え
+
+
+
+コンポーネントをドラック時のショートカット
+---------------------------------------------------------------------------------
+:Shift+R: 	有効なモードを切り換え
+:Shift+Tab: 	Cycle through the four different component　selection modes
+:N: 	コネクション ラインを表示、または非表示
+:Shift+Ctrl+G: 	Gloss効果モードを切り換え(Weak --> Strong --> Off)
+:Ctrl+Shift: 	一時的に、gloss周期を無効
+
+インタラクティブ マルチ配線のショートカット
+---------------------------------------------------------------------------------
+:Tab: 	配線プリファレンス、および配置するバスのプロパティを変更できるInteractive RoutingモードのPropertiesパネルを表示
+:Shift+スペースバー: 	4種類のコーナーモード (45°、45°アーク、90°、90°アーク) を切り換え
+:スペースバー: 	コーナー方向サブモード (コーナーモード用) を切り換え
+:,: 	アークコーナー配置モードのとき、アークの半径を減少 (1mil/0.025mm単位で)
+:Shift+,: 	アークコーナー配置モードのとき、アークの半径を減少 (10mil/0.254mm単位で)
+:.: 	アークコーナー配置モードのとき、アークの半径を増加 (1mil/0.025mm単位で)
+:Shift+.: 	アークコーナー配置モードのとき、アークの半径を増加 (10mil/0.254mm単位で)
+:クリック、あるいはEnter: 	現在のカーソル位置で配線を確定し、トラックを配置
+:Backspace: 	最後のセグメントを削除
+:Esc: 	現在の配線を終了。終了する前に確定した配線は、保存されます
+:Ctrl+クリック: 	接続を自動で完了
+:Shift+R: 	現在、有効な配線の衝突解決モードを切り換え。利用可能なモード (Walkaround Obstacles、Push Obstacles、Hug and Push Obstacles、Ignore obstacles、Stop at First Obstacleを含む) は、PreferencesダイアログのPCB Editor - Interactive Routingページで定義でき、即座に変更できます (Tabキーを押して、Interactive RoutingモードのPropertiesパネルを表示)束配線をインタラクティブ配線するとき、AutoRoute On Current Layer、およびAutoRoute On Multiple Layersモードは利用できません。
+:Shift+D: 	自動ループ削除機能のオン/オフを切り換え
+:Ctrl+W: 	クリアランス境界の表示を切り換え
+:Shift+W: 	TrackモードのPropertiesパネルで事前に定義した、お気に入りの配線幅からトラック幅を選択
+:Shift+V: 	Choose Via Sizesダイアログを使用して、事前に定義したビアテンプレートからビアサイズを選択
+:3: 	配線幅のソースを切り換え (User Choice --> Rule Minimum --> Rule Preferred --> Rule Maximum)
+:4: 	ビアサイズのソースを切り換え (User Choice --> Rule Minimum --> Rule Preferred --> Rule Maximum)
+:5: 	利用できるビアパターン (整列、または交互) を切り換え
+:+ (10キー上の): 	次の (ルールに適合した) 層へ切り換え、ビアを配置
+:- (10キー上の): 	前の (ルールに適合した) 層へ切り換え、ビアを配置
+:* (10キー上の): 	次の (ルールに適合した) 信号層へ切り換え、ビアを配置
+:L: 	マルチレイヤー パッド、あるいはビアから配線するとき、レイヤーを該当のパッド/ビア用に定義した次の信号層に切り換え。この機能は、パッド/ビアから配線を開始して、最初のセグメントを確定する前だけ利用できます。
+:/: 	ファンアウトビアを追加。ツールは、次のファンアウトの配線とビア配置のために即座に待機します
+:2: 	レイヤーを変更せずにビアを追加
+:C: 	Clearanceルールで定義したTrack-Trackクリアランス値を使用して、隣接する配線間のスペースを変更
+:B: 	隣接する配線間のスペースを減少
+:Shift+B: 	隣接する配線間のスペースを増加
+:Shift+Ctrl+G: 	Glossing Effortモードを切り換え (Weak --> Strong --> Off)
+
+インタラクティブ配線長チューニングのショートカット
+---------------------------------------------------------------------------------
+:スペースバー: 	チューニング パターンを前へ切り換え。利用できるパターンは: Mitered with Lines、Mitered with Arcs、Rounded
+:Shift+スペースバー: 	チューニング パターンを後へ切り換え。利用できるパターン: Mitered with Lines、Mitered with Arcs、Rounded
+:Shift+G: 	配線長チューニング ゲージ表示のオン/オフを切り換え
+:Tab: 	目標配線長を定義したり、チューニングに使用するアコーディオン パターンのプロパティを即座に変更できるAccordion モードのPropertiesパネルを表示
+:,: 	AccordionモードのPropertiesパネルにあるAmplitude Incrementで定義した数値に従って、アコーディオン パターンの振幅を減少
+:.: 	AccordionモードのPropertiesパネルにあるAmplitude Incrementで定義した数値に従って、アコーディオン パターンの振幅を増加
+:1: 	コーナー (miter) 半径を減少 (Mitered with Lines、あるいはMitered with Arcsアコーディオン パターンの使用時)
+:2: 	コーナー (miter) 半径を増加 (Mitered with Lines、あるいはMitered with Arcsアコーディオン パターンの使用時)
+:3: 	AccordionモードのPropertiesパネルにあるGap Incrementで定義した数値に従って、アコーディオン パターンのギャップ (ピッチ) を減少
+:4: 	AccordionモードのPropertiesパネルにあるGap Incrementで定義した数値に従って、アコーディオン パターンのギャップ (ピッチ) を増加
+:Y: 	アコーディオン パターンの振幅方向 (開始方向) を切り換え
+
+
+
+3D外形配置のショートカット
+---------------------------------------------------------------------------------
+:Tab: 	配置/移動する3D外形オブジェクトのプロパティを即座に変更できる3D BodyモードのPropertiesパネルを表示
+:L: 	配置/移動している3D外形オブジェクトを基板の反対面に反転
+:N: 	コンポーネントの3D外形を移動中、コネクションライン (ラッツネスト) の表示を切り換え
+:X: 	配置/移動している3D外形オブジェクトをX軸に沿って反転
+:Y: 	配置/移動している3D外形オブジェクトをY軸に沿って反転
+:8 (10キー上の): 	配置/移動する3D外形オブジェクトをモデルのX軸に沿って反時計回りに90°回転
+:2 (10キー上の): 	配置/移動する3D外形オブジェクトをモデルのX軸に沿って時計回りに90°回転
+:4 (10キー上の): 	配置/移動する3D外形オブジェクトをモデルのY軸に沿って反時計回りに90°回転
+:6 (10キー上の): 	配置/移動する3D外形オブジェクトをモデルのY軸に沿って時計回りに90°回転
+:スペースバー: 	配置/移動する3D外形オブジェクトをモデルのZ軸に沿って反時計回りに90°回転
+:Shift+スペースバー: 	配置/移動する3D外形オブジェクトをモデルのZ軸に沿って時計回りに90°回転
+:9 (10キー上の): 	配置/移動する3D外形オブジェクトのStandoff Heightを1スナップグリッド単位で増加
+:3 (10キー上の): 	配置/移動する3D外形オブジェクトのStandoff Heightを1スナップグリッド単位で減少
+
+3Dビジュアライゼーションのショートカット
+---------------------------------------------------------------------------------
+:0: 	基板 (または、コンポーネント) のビューを3Dに変更し、回転ゼロで上から (垂直に) 見下ろした状態を表示。加えて、3Dで基板 (あるいは、ライブラリ コンポーネント) を表示しているとき、PCB Standardツールバー (PCBエディタ)、あるいはPCB Lib Standardツールバー (PCBライブラリ エディタ) 上のドロップダウンから、すばやく事前に定義した3Dビューを選択できます。	
+:9: 	基板 (または、コンポーネント) のビューを3Dに変更し、X-平面で90° (時計回り) 回転して上から (垂直に) 見下ろした状態を表示。加えて、3Dで基板 (あるいは、ライブラリ コンポーネント) を表示しているとき、PCB Standardツールバー (PCBエディタ)、あるいはPCB Lib Standardツールバー (PCBライブラリ エディタ) 上のドロップダウンから、すばやく事前に定義した3Dビューを選択できます。
+:8: 	基板 (または、コンポーネント) のビューを3Dに変更し、基板をorthogonal perspective視点で表示。加えて、3Dで基板 (あるいは、ライブラリ コンポーネント) を表示しているとき、PCB Standardツールバー (PCBエディタ)、あるいはPCB Lib Standardツールバー (PCBライブラリ エディタ) 上のドロップダウンから、すばやく事前に定義した3Dビューを選択できます。
+:5: 	フレキシブル領域がある基板の平面状態 (折り曲げライン設定を適用していない)、および折り曲げ状態 (折り曲げライン設定を適用している) を切り換え 	
+:Shift: 	3D回転球体を表示。球体を表示して、右クリックとドラッグによりビューの方向を変更します 	-
+:Ctrl+C: 	メインデザインワークスペース内で、現在のビューをクリップボードにビットマップ フォーマット (*.bmp) でコピー。3D Snapshot Resolutionダイアログから、コピーした画像の解像度をコントロールできます 	
+:L: 	基板の3Dレンダリングを設定できるView Configurationパネルを表示 	-
+
+3D測定のショートカット
+---------------------------------------------------------------------------------
+:Q: 	測定単位をメートル系 (ｍｍ) とインチ系 (mil) 間で切り換え - 表示される測定値は、それに応じて更新されます
+:Ctrlキーを押し続ける: 	3Dオブジェクト上でカーソルを動かすとき、オブジェクトの特定の面を選択するために使用
+:Shift+C: 	現在、3Dワークスペースに表示されている寸法をすべて削除
+
+
+
+Managed Componentエディタのショートカット
+---------------------------------------------------------------------------------
+出力ジョブ エディタのショートカット
+---------------------------------------------------------------------------------
+Draftsmanエディタのショートカット
+---------------------------------------------------------------------------------
+マルチボード エディタのショートカット
+---------------------------------------------------------------------------------
+CAMエディタのショートカット
+---------------------------------------------------------------------------------
+SimDataエディタのショートカット
+---------------------------------------------------------------------------------
+テキストベースのドキュメント エディタのショートカット
+---------------------------------------------------------------------------------
+
