--- a/ショートカット集.rst
+++ b/ショートカット集.rst
@@ -2,6 +2,9 @@
 Altium ショートカット集
 ================================================================================
 
+元サイト；https://www.altium.com/jp/documentation/altium-designer/altium-designer-shortcut-keys?version=19.0
+
+
 一般的なAltium環境のショートカット
 ---------------------------------------------------------------------------------
 
